fix font-size on mobile

--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,6 @@ footer {
     .messageBox {
         max-width: 90%; /* Aumenta a responsividade da caixa de mensagem */
         overflow: auto;
-        font-size: 15px;
+        font-size: 1em;
     }
 }
